feat: storage account access in .net 4.8

--- a/KeyVaultDemoDotNet47/Web.config
+++ b/KeyVaultDemoDotNet47/Web.config
@@ -5,12 +5,15 @@
   -->
 <configuration>
   <configSections>
-    <section name="configBuilders" type="System.Configuration.ConfigurationBuildersSection, System.Configuration, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" restartOnExternalChanges="true" requirePermission="false"/>
+    <section name="configBuilders" type="System.Configuration.ConfigurationBuildersSection, System.Configuration, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" 
+             restartOnExternalChanges="true" requirePermission="false"/>
   </configSections>
   <configBuilders>
     <builders>
-      <add name="AzureKeyVault" mode="Greedy" vaultName="demo-dotnet47-kv" type="Microsoft.Configuration.ConfigurationBuilders.AzureKeyVaultConfigBuilder, Microsoft.Configuration.ConfigurationBuilders.Azure, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"/>
-      <add name="Secrets" userSecretsId="70d64fb8-36f0-41b5-8851-b8e7adaff736" type="Microsoft.Configuration.ConfigurationBuilders.UserSecretsConfigBuilder, Microsoft.Configuration.ConfigurationBuilders.UserSecrets, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"/>
+      C
+           type="Microsoft.Configuration.ConfigurationBuilders.AzureKeyVaultConfigBuilder, Microsoft.Configuration.ConfigurationBuilders.Azure, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"/>
+      <add name="Secrets" userSecretsId="70d64fb8-36f0-41b5-8851-b8e7adaff736" 
+           type="Microsoft.Configuration.ConfigurationBuilders.UserSecretsConfigBuilder, Microsoft.Configuration.ConfigurationBuilders.UserSecrets, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"/>
     </builders>
   </configBuilders>
   <connectionStrings configBuilders="AzureKeyVault">
