feat: blob DownloadBlockBlobAsync

--- a/StorageAccountDemoDotNet48/Web.config
+++ b/StorageAccountDemoDotNet48/Web.config
@@ -5,6 +5,8 @@
   -->
 <configuration>
   <appSettings>
+    <add key="accountName" value="demodotnet48stg"/>
+    <add key="containerName" value="abc"/>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
