--- a/KeyVaultDemoDotNet47/Web.config
+++ b/KeyVaultDemoDotNet47/Web.config
@@ -10,10 +10,8 @@
   </configSections>
   <configBuilders>
     <builders>
-      C
-           type="Microsoft.Configuration.ConfigurationBuilders.AzureKeyVaultConfigBuilder, Microsoft.Configuration.ConfigurationBuilders.Azure, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"/>
-      <add name="Secrets" userSecretsId="70d64fb8-36f0-41b5-8851-b8e7adaff736" 
-           type="Microsoft.Configuration.ConfigurationBuilders.UserSecretsConfigBuilder, Microsoft.Configuration.ConfigurationBuilders.UserSecrets, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"/>
+      <add name="AzureKeyVault" mode="Greedy" vaultName="demo-dotnet47-kv" type="Microsoft.Configuration.ConfigurationBuilders.AzureKeyVaultConfigBuilder, Microsoft.Configuration.ConfigurationBuilders.Azure, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"/>
+      <add name="Secrets" userSecretsId="70d64fb8-36f0-41b5-8851-b8e7adaff736" type="Microsoft.Configuration.ConfigurationBuilders.UserSecretsConfigBuilder, Microsoft.Configuration.ConfigurationBuilders.UserSecrets, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"/>
     </builders>
   </configBuilders>
   <connectionStrings configBuilders="AzureKeyVault">
